fix(a11y): improved contrast to pass a11y requirements

--- a/src/styles/color-theme.css
+++ b/src/styles/color-theme.css
@@ -6,6 +6,7 @@
 	--cb-orange: #c85a19;
 	--cb-orange-hsl: 22 78% 44%;
 	--cb-dark-orange: #ab3d16;
+	--cb-dark-orange-hsl: 16 77% 38%;
 
 	--black: var(--gray-9);
 	--white: #fff;
